crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_missing_required_named.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: missing required argument
   ╭─[ <suggestion>:1:9 ]
   │
 1 │ connect --url <url>
   │         ─────┬─────  
   │              ╰─────── Server URL (required)
───╯
